--- a/src/react-router_project/styles/Nav.css
+++ b/src/react-router_project/styles/Nav.css
@@ -58,7 +58,7 @@ nav form input {
 .header {
   background-color: rgb(22, 178, 16);
   text-align: center;
-  color: white;
+  color: rgb(195, 255, 192);
   width: 100%;
   height: 100%;
 }
@@ -119,7 +119,7 @@ nav form input {
 
 .NewPost {
   background-color: rgb(216, 255, 216);
-  margin: 10px;
+  margin: 10px 20rem;
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -190,7 +190,7 @@ nav form input {
   flex-direction: column;
   height: 100%;
   width: 80%;
-  margin: 10px 0;
+  margin: 10px 0 0 0;
   border-radius: 10px;
   padding: 10px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
@@ -203,7 +203,7 @@ nav form input {
   height: 55%;
   width: 60%;
   margin: 5%;
-  margin-top: 10%;
+  margin-top: 4rem;
   border-radius: 10px;
   padding-bottom: 1%;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
