--- a/src/components/styles/Nav.css
+++ b/src/components/styles/Nav.css
@@ -92,18 +92,18 @@ nav form input {
   border-radius: 7px;
   margin-top: 10px;
   padding: 3px;
-  width: 20%;
+  width: 100px;
   cursor: pointer;
   margin-left: 15px;
 }
-.post .edit-btn {
+.edit-btn {
   background-color: rgb(21, 75, 200);
   color: white;
   border: none;
   border-radius: 7px;
   margin-top: 10px;
   padding: 3px;
-  width: 15%;
+  width: 50px;
   cursor: pointer;
   margin-left: 5px;
 }
@@ -111,7 +111,7 @@ nav form input {
 .post .delete-btn:hover {
   background-color: rgb(207, 36, 36);
 }
-.post .edit-btn:hover {
+.edit-btn:hover {
   background-color: rgb(41, 101, 241);
 }
 
@@ -119,7 +119,7 @@ nav form input {
 
 .NewPost {
   background-color: rgb(216, 255, 216);
-  margin: 10px 20rem;
+  margin: 10px 10%;
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -147,7 +147,7 @@ nav form input {
     resize: none;
     height: 100px;
 }
-.NewPost .newPostForm button {
+.NewPost .newPostForm .post-btn {
   position: relative;
   top: 8px;
   width: 100px;
@@ -160,7 +160,7 @@ nav form input {
   cursor: pointer;
 }
 
-.NewPost .newPostForm button:hover {
+.NewPost .newPostForm .post-btn:hover {
   background-color: rgb(10, 167, 10);
   color: white;
 }
@@ -237,7 +237,7 @@ nav form input {
   border-radius: 5px;
 }
 
-.btn button {
+.btn .contact-btn {
   margin-top: 5px;
   width: 80px;
   padding: 2px;
@@ -251,14 +251,18 @@ nav form input {
   text-align: center;
   justify-self: center;
 }
-.contact button:hover {
+.contact .contact-btn:hover {
   background-color: rgb(107, 236, 20);
+}
+
+.Home{
+  margin-bottom: 30%;
 }
 
 @media screen and (max-width: 600px) {
   
   .content {
-    margin-top: 120px;
+    margin-top: 150px;
   }
   .nav-div{
     height: 110px;
@@ -268,6 +272,8 @@ nav form input {
     flex-direction: column;
     height: 70px;
   }
-  
-
+  .contact{
+  margin: 40px 2px;
+  width: 80%;
+  }
 }
