--- a/src/components/styles/style.css
+++ b/src/components/styles/style.css
@@ -58,9 +58,16 @@ nav form input {
 .header {
   background-color: rgb(22, 178, 16);
   text-align: center;
-  color: rgb(195, 255, 192);
+  color: rgb(221, 255, 219);
+
   width: 100%;
   height: 100%;
+  cursor: pointer;
+}
+
+.header:hover{
+  color: rgb(171, 255, 167);
+
 }
 
 .header i {
